GNOME Bugzilla – Bug 669902
Messages need clarification/fix
Last modified: 2012-02-14 15:43:42 UTC
#: ../utils/gdmflexiserver.c:869 #, c-format msgid "User unable to determine login session." msgstr "" Is it 'User is unable to...'? Also 'login session' requires an article ('a'?) before itself. #: ../utils/gdmflexiserver.c:860 #, c-format msgid "Seat can't do multi session" msgstr "" Same problems here.
For the developers: https://live.gnome.org/TranslationProject/DevGuidelines/Use%20comments
Created attachment 207495 [details] [review] gdmflexiserver: fix up error messages The existin error messages are vague, hard to read, and even harder to translate. This commit changes a few of them to hopefully help the situation a bit. http://bugzilla.gnome.org/show_bug.cgi?id=669902
The system is unable to determine whether to switch to an existing login screen *or or* start up a new login screen. Should be fixed too.
Review of attachment 207495 [details] [review]: *or or* in one of new messages should be fixed.
thanks for proofreading, i'll commit a fix now.