gdmflexiserver: fix up error messages

The existin error messages are vague, hard to read,
and even harder to translate.

This commit changes a few of them to hopefully help
the situation a bit.

http://bugzilla.gnome.org/show_bug.cgi?id=669902