utils/gdmflexiserver.c
@@ -849,7 +849,7 @@ goto_login_session_for_systemd (DBusConnection  *connection,
                 free (seat_id);
 
                 g_debug ("failed to determine whether seat can do multi session: %s", strerror (-res));
-                g_set_error (error, GDM_FLEXISERVER_ERROR, 0, _("Could not identify multi session property."));
+                g_set_error (error, GDM_FLEXISERVER_ERROR, 0, _("The system is unable to determine whether to switch to an existing login screen or or start up a new login screen."));
 
                 return FALSE;
         }
@@ -857,7 +857,7 @@ goto_login_session_for_systemd (DBusConnection  *connection,
         if (res == 0) {
                 free (seat_id);
 
-                g_set_error (error, GDM_FLEXISERVER_ERROR, 0, _("Seat can't do multi session"));
+                g_set_error (error, GDM_FLEXISERVER_ERROR, 0, _("The system is unable to start up a new login screen."));
 
                 return FALSE;
         }
@@ -866,7 +866,7 @@ goto_login_session_for_systemd (DBusConnection  *connection,
         if (! res) {
                 free (seat_id);
 
-                g_set_error (error, GDM_FLEXISERVER_ERROR, 1, _("User unable to determine login session."));
+                g_set_error (error, GDM_FLEXISERVER_ERROR, 1, _("The system is unable to find a login screen to switch to."));
                 return FALSE;
         }
 
